# klein-mamba-loa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  USER_ACTIONS.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MODEL_CARD.md  REFERENCES.md  architecture.d2  persona-rfc.md
examples/: toy_train.py
experiments/_wip/transfusion-gibson/: CONTEXT.md  TODO_NEXT.md  pipeline-state.json  vram_report.json
experiments/_wip/transfusion-gibson/monitor_logs/: 2026-05-18-architect.md  2026-05-18-meta-critic.md  2026-05-18-verifier.md  README.md
klein_mamba_loa/: __init__.py
klein_mamba_loa/backbone/: __init__.py  flux2_klein_wrapper.py  janus_pro_wrapper.py  mamba2_wrapper.py  mamba_transfusion_bridge.py
klein_mamba_loa/core/: __init__.py
klein_mamba_loa/eval/: __init__.py  runtime_gate.py
klein_mamba_loa/flow/: __init__.py
klein_mamba_loa/flow/loss/: __init__.py  pgc_dfm.py
klein_mamba_loa/flow/solver/: __init__.py
klein_mamba_loa/flow/velocity/: __init__.py
klein_mamba_loa/mcp/: __init__.py  persona_scheme.py
klein_mamba_loa/memory/: __init__.py
klein_mamba_loa/persona/: __init__.py  disentangle.py  erasure.py  geometry.py  lora_pool.py
klein_mamba_loa/serving/: __init__.py  commercial_gate.py
scripts/: check_file_lengths.py  license_guard.py  measure_vram.py
tests/: test_backbone_surface.py  test_commercial_gate.py  test_disentangle.py  test_erasure.py  test_geometry.py  test_license_guard.py  test_lora_pool.py  test_measure_vram.py  test_persona_scheme.py  test_pgc_dfm.py  test_runtime_gate.py  test_toy_train_import.py
