[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klein-mamba-loa"
version = "0.0.1.dev0"
description = "Stratified Persona Flow (SPF): disentangled velocity fields for multi-persona multimodal generation. Transfusion x Flow Matching x Mamba-2 x FLUX.2 klein stack."
authors = [{name = "klein-mamba-loa maintainers"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "flow-matching",
    "transfusion",
    "mamba",
    "persona",
    "multimodal",
    "diffusion",
    "mcp",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core deps stay tiny and torch-free so CPU-only hosts can import the package
# for S0 verification without pulling a ~800MB torch wheel. torch lives in the
# [flow] extra and is required only at training/inference time.
dependencies = [
    "einops>=0.7",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "numpy>=1.24",
]

[project.optional-dependencies]
flow = [
    "torch>=2.4",
    "torchcfm>=1.0",
    "transfusion-pytorch>=0.5",
]
mamba = [
    "torch>=2.4",
    "mamba-ssm>=2.0",
    "causal-conv1d>=1.4",
]
flux = [
    "torch>=2.4",
    "diffusers>=0.30",
    "transformers>=4.40",
    "accelerate>=0.30",
]
memory = [
    "mem0ai>=0.1",
    "lightrag-hku>=1.0",
]
mcp = [
    "mcp>=1.0",
]
serving = [
    "sglang>=0.3",
    "vllm>=0.6",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = [
    "klein-mamba-loa[flow,mamba,flux,memory,mcp,serving,dev]",
]

[project.urls]
# These URLs are placeholders. Set the real repo location before publishing
# (USER_ACTIONS.sh step "gh repo create" overwrites them).
Homepage = "https://github.com/hinanohart/klein-mamba-loa"
Repository = "https://github.com/hinanohart/klein-mamba-loa"
Issues = "https://github.com/hinanohart/klein-mamba-loa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["klein_mamba_loa*"]
exclude = ["tests*", "experiments*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
# Test files and the experiments tree are out of scope for mypy.
exclude = ["tests/", "experiments/", "build/"]
